Fixing Steam reviews text content being slightly truncated as a result of recent Ratings and Reviews work

--- a/rest/compton_styles/downloads.css
+++ b/rest/compton_styles/downloads.css
@@ -20,6 +20,6 @@ hr.subtle {
 }
 
 .operating-system-heading {
-    padding: var(--s-s);
+    padding-block: var(--s-s);
     border-radius: var(--s-xs);
 }
