--- a/rest/compton_styles/steam-reviews.css
+++ b/rest/compton_styles/steam-reviews.css
@@ -23,7 +23,7 @@ fspan.monochrome-emoji {
 }
 
 .steam-reviews {
-    padding: var(--s-s);
+    padding-block: var(--s-s);
     border-radius: var(--s-xs);
     max-width: var(--s-maxw);
     width: 100%;
